# odin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
docs/: DOCS.md  OLD.md  TODO.md  drawings.drawio
src/odin_c/: CMakeLists.txt  ansi_colors.h  odin.h  odin_codec.h  odin_core.c  odin_core.h  odin_lookup.c  odin_lookup.h  odin_security.c  odin_security.h  odin_utils.c  odin_utils.h  test.pb
src/odin_c/codec/: TLV_codec.c  TLV_codec.h  json_codec.c  json_codec.h  number_codec.c  number_codec.h  odin.pb.h  protobuff_codec.c  protobuff_codec.h  string_codec.c  string_codec.h
src/odin_c/codec/pb/: odin.proto
src/odin_c/extensions/: extensions.c  extensions.h  io_extension.c  validate_extension.c
src/odin_python/: cli.py
src/odin_python/data_types/: __init__.py  model.drawio  type_definition.py  type_registry.py
src/odin_python/extensions/: __init__.py  common.py  io_extension.py  string_codec_extension.py  validation_extension.py
src/odin_python/generators/: abstract_generator.py  generator.py
src/odin_python/generators/c/: generator.py  model.py  odin_defs.py
src/odin_python/generators/c/objects/: __init__.py  group.py  object.py  variable.py
src/odin_python/generators/db/: convertors.py  generator.py
src/odin_python/generators/pdf/: generator.py
src/odin_python/generators/py/: conversion.py  generator.py
src/odin_python/generators/py/template/: pyproject.toml
src/odin_python/generators/py/template/src/odin_interface/: base_types.py
src/odin_python/parameter/: __init__.py  access_control.py  loader.py  parameter.py
src/odin_python/utils/: csnake_custom.py  string.py
test/: cli.py  test_all_config.py  test_cli.py
test/flawed_test_configs/: README.md  collections.yaml  first_level_collision.yaml  first_level_out_of_bounds_1.yaml  first_level_out_of_bounds_2.yaml  first_level_out_of_bounds_3.yaml  invalid.yaml  second_level_collision.yaml  second_level_out_of_bounds.yaml  wrong_type.yaml
test/test_configs/: access_control.yaml  all_built_in_type_arrays.yaml  all_built_in_type_vector.yaml  all_built_in_types.yaml  base_config.yaml  collections.yaml  config.yaml  custom_types.yaml  simple_generation.yaml
