[project]
name = "odin-python"
dynamic = ["version"]
description = "Odin code generation tools for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Floris Verniewuer", email = "floris@vernieuwe.eu" }]

dependencies = [
    "click>=8.1.8",
    "csnake>=0.4.0",
    "jinja2>=3.1.6",
    "mdutils>=1.6.0",
    "odin-db>=1.3.0",
    "pydantic>=2.10.6",
    "pydantic-yaml>=1.4.0",
    "reportlab>=4.3.1",
    "strenum>=0.4.15",
]

[dependency-groups]
dev = ["ruff>=0.9.9", "pytest>=8.3.5", "pytest-cov>=6.0.0"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402"]

[tool.ruff]
line-length = 140
exclude = ["**.pyi", "**/.venv/**"]
include = ["src/**.py", "test/**.py"]

[tool.pyright]
ignore = ["**.pyi", "**/.venv/**"]

[project.scripts]
odin = "odin_python:cli"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
